# integral-philosophy-core

./: README.md  pyproject.toml  requirements.txt
src/integral_philosophy_core/: __init__.py  cli.py  content_pipeline.py
src/integral_philosophy_core/converters/: __init__.py  format_converter.py
src/integral_philosophy_core/generators/: ast_to_uml.py  html_tei_converter.py  tei_generator.py  xslt_transformer.py
src/integral_philosophy_core/parsers/: __init__.py  markdowntex_parser.py
src/integral_philosophy_core/scrapers/: __init__.py  web_scraper.py
src/integral_philosophy_core/utils/: advanced_reconstruction.py  extract_bibliography.py
src/integral_philosophy_core/validators/: validate_publication.py
